fix court id view on mobile

--- a/css/id.css
+++ b/css/id.css
@@ -38,3 +38,9 @@
   padding: 5px;
   border-radius: 5px;
 }
+
+@media (max-width: 500px) {
+  .idPic {
+    padding-bottom: 10px;
+  }
+}
